@@ -1,69 +1,73 @@
-apply plugin: 'maven'
-apply plugin: 'signing'
-
-dependencies {
-    compile files("${System.properties['java.home']}/../lib/tools.jar")
+plugins {
+    id 'maven-publish'
+    id 'signing'
 }
 
-task sourcesJar(type: Jar) {
-    classifier = 'sources'
-    from sourceSets.main.allSource
+// On Java 9+, JDI lives in the jdk.jdi module instead of tools.jar
+if (JavaVersion.current().isJava9Compatible()) {
+    tasks.withType(JavaCompile).configureEach {
+        options.compilerArgs += ['--add-modules', 'jdk.jdi']
+    }
+} else {
+    dependencies {
+        implementation files("${System.properties['java.home']}/../lib/tools.jar")
+    }
 }
 
-task javadocJar(type: Jar) {
-    classifier = 'javadoc'
-    from javadoc
+java {
+    withSourcesJar()
+    withJavadocJar()
 }
 
-artifacts {
-    archives sourcesJar, javadocJar
-}
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            from components.java
 
-signing {
-    sign configurations.archives
-}
-
-uploadArchives {
-    repositories {
-        mavenDeployer {
-            beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
-
-            repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
-                authentication(userName: ossrhUsername, password: ossrhPassword)
-            }
-
-            snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
-                authentication(userName: ossrhUsername, password: ossrhPassword)
-            }
-
-            pom.project {
-                name 'jdiscript'
-                packaging 'jar'
-                // optionally artifactId can be defined here
-                description 'A scripting wrapper for the Java Debugger Interface'
-                url 'https://github.com/jfager/jdiscript'
+            pom {
+                name = 'jdiscript'
+                packaging = 'jar'
+                description = 'A scripting wrapper for the Java Debugger Interface'
+                url = 'https://github.com/jfager/jdiscript'
 
                 scm {
-                    connection 'scm:git:git://github.com/jfager/jdiscript.git'
-                    developerConnection 'scm:git:ssh://github.com:jfager/jdiscript.git'
-                    url 'https://github.com/jfager/jdiscript/tree/master'
+                    connection = 'scm:git:git://github.com/jfager/jdiscript.git'
+                    developerConnection = 'scm:git:ssh://github.com:jfager/jdiscript.git'
+                    url = 'https://github.com/jfager/jdiscript/tree/master'
                 }
 
                 licenses {
                     license {
-                        name 'The Apache License, Version 2.0'
-                        url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                        name = 'The Apache License, Version 2.0'
+                        url = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
                     }
                 }
 
                 developers {
                     developer {
-                        id 'jfager'
-                        name 'Jason Fager'
-                        email 'jfager@gmail.com'
+                        id = 'jfager'
+                        name = 'Jason Fager'
+                        email = 'jfager@gmail.com'
                     }
                 }
             }
         }
     }
+
+    repositories {
+        maven {
+            name = 'ossrh'
+            def releasesUrl = uri("https://oss.sonatype.org/service/local/staging/deploy/maven2/")
+            def snapshotsUrl = uri("https://oss.sonatype.org/content/repositories/snapshots/")
+            url = version.toString().endsWith('SNAPSHOT') ? snapshotsUrl : releasesUrl
+            credentials {
+                username = findProperty('ossrhUsername') ?: ''
+                password = findProperty('ossrhPassword') ?: ''
+            }
+        }
+    }
+}
+
+signing {
+    sign publishing.publications.mavenJava
 }
